# SiriusTools_Backend

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml
.github/workflows/: cd.yml
app/core/: settings.py
